--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap');
+
 @layer base {
   @font-face {
-    font-family: 'HelveticaNeue-Light';
-    src: url('/fonts/HelveticaNeue-Light.woff2') format('woff2');
+    font-family: 'KellySlab-Regular';
+    src: url('/fonts/KellySlab-Regular.woff2') format('woff2');
     font-weight: 200;
     font-display: swap;
     font-style: normal;
@@ -16,8 +18,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
